password field 추가

--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
     <h1>Login Page</h1>
     <form>
         Username : <input type="text" id="username">
+        Password : <input type="password" id="password">
         <input type="submit" value="로그인">
     </form>
 </body>
