submit을 button으로 수정

--- a/login.html
+++ b/login.html
@@ -10,7 +10,8 @@
     <h1>Login Page</h1>
     <form>
         Username : <input type="text" id="username">
-        <input type="submit" value="로그인">
+        <!-- <input type="submit" value="로그인"> -->
+        <button>로그인</button>
     </form>
 </body>
 </html>
